--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,18 +10,25 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    The new collections are here
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
-            </div>
+<section class="text-center container-fluid">
+    <div class="row">
+      <!-- Home banner -->
+      <div class="col-12 col-lg-6 d-none d-lg-block home-banner mt-5">
+        <div class="mt-5">
+          <h1>Want to decorate?</h1>
+          <p>Browse through our collection of furniture</p>
         </div>
+        <div>
+          <a href="#" class="btn btn-black">
+            Shop Now
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 d-none d-lg-block home-banner-image mt-5">
+        <a href="#">
+          <img src="media/myhome.jpg" alt="Home banner">
+        </a>
+      </div>
     </div>
+  </section>
 {% endblock %}
