add products detail functionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
           <p>Browse through our collection of furniture</p>
         </div>
         <div>
-          <a href="#" class="btn btn-black">
+          <a href="{% url 'products' %}" class="btn btn-black">
             Shop Now
           </a>
         </div>
