add sorting and product count to product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,13 @@ body {
     color: white;
 }
 
+
+/* products badeges */
+
+a.category-badge > span.badge:hover {
+    background: black !important;
+    color: white !important;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
