add bag and shopping context

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,14 @@ body {
     color: white;
 }
 
+.pointer:hover {
+    color:blue;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
 
 /* products badeges */
 
