--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,7 +36,7 @@
     <div class="row modalbanner text-center">
         <div class="col-4 mt-2">
             <div>
-                <h5 data-bs-toggle="modal" data-bs-target="#Modal-1">
+                <h5 class="pointer" data-bs-toggle="modal" data-bs-target="#Modal-1">
                     <i class="far fa-money-bill-alt"></i>
                     Free delivery over $200
                 </h5>
@@ -44,7 +44,7 @@
         </div>
         <div class="col-4 mt-2">
             <div>
-                <h5 data-bs-toggle="modal" data-bs-target="#Modal-2">
+                <h5 class="pointer" data-bs-toggle="modal" data-bs-target="#Modal-2">
                     <i class="fas fa-box"></i>
                     Home installation
                 </h5>
@@ -52,7 +52,7 @@
         </div>
         <div class="col-4 mt-2">
             <div>
-                <h5 data-bs-toggle="modal" data-bs-target="#Modal-3">
+                <h5 class="pointer" data-bs-toggle="modal" data-bs-target="#Modal-3">
                     <i class="fas fa-people-carry"></i>
                     Lifetime warranty
                 </h5>
