--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -47,7 +47,7 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="">
+                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <div class="input-group">
@@ -75,7 +75,9 @@
                                             </div>
                                         </form>
                                         <a class="update-link text-info pointer"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right pointer" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                                        <a class="remove-item text-danger pointer" id="remove_{{ item.item_id }}">
+                                            Delete Product
+                                        </a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
@@ -138,18 +140,18 @@
     })
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/bag/remove/${itemId}`;
+        var url = `/bag/remove/${itemId}/`;
         var data = {
             'csrfmiddlewaretoken': csrfToken
         };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
 {% endblock %}
