--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -34,6 +34,12 @@
                     <p class="mt-3">{{ product.description }}</p>
                     <p class="mt-3">{{ product.dimensions }}</p>
                 </div>
+                {% if request.user.is_superuser %}
+                    <div class="ml-3">
+                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </div>
+                {% endif %}
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
