--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -76,6 +76,12 @@
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                                         </div>
+                                        {% if request.user.is_superuser %}
+                                        <div class="ml-3">
+                                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                        </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
