--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,10 @@
                           {% if request.user.is_authenticated %}
                               {% if request.user.is_superuser %}
                                   <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                  <a href="{% url 'manage_inspo_items' %}" class="dropdown-item">inspo Item Management</a>
                               {% endif %}
                               <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                              <li class="mb-2"><a href="{% url 'inspo_items' %}" class="font-black">Inspo</a></li>
                               <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                           {% else %}
                               <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
