--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -77,5 +77,10 @@
                 <a href="" class="dropdown-item">All Specials</a>
             </div>
         </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'inspo_items' %}" id="inspo_items" aria-haspopup="true" aria-expanded="false">
+                Inspo
+            </a>
+        </li>
     </ul>
 </div>
