--- a/templates/base.html
+++ b/templates/base.html
@@ -156,6 +156,7 @@
       {% endblock %}
 
       {% block postloadjs %}
+      <script src="{% static 'js/scripts.js' %}"></script>
       <script src="{% static 'js/toast.js' %}"></script>
       {% endblock %}
 
