Add onsale functionailty to product, bag, and checkout pages

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -52,7 +52,11 @@
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            {% if item.product.onsale %}
+                                <p class="my-0 small text-muted">${{ item.product.onsale_price | calc_subtotal:item.quantity }}</p>
+                            {% else %}
+                                <p class="my-0 small text-muted">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
