--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -74,7 +74,7 @@
                 On Sale
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="sale-link">
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=all_specials" class="dropdown-item">All Specials</a>
             </div>
         </li>
         <li class="nav-item">
