--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,139 +2,182 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+{% block extra_title %}
+Bag
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr>
-            </div>
+<div class="overlay"></div>
+<div class="container bag-container mt-5 mb-2">
+    <div class="row">
+        <div class="col">
+            <h2 class="page-banner mt-4 mb-4">Shopping Bag</h2>
         </div>
-
+    </div>
+</div>
+<section id="cart-main">
+    <div class="container">
+        {% if bag_items %}
         <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded">
-                        <table class="table table-sm table-borderless">
-                            <thead class="text-black">
-                                <tr>
-                                    <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Qty</th>
-                                    <th scope="col">Subtotal</th>
-                                </tr>
-                            </thead>
-
-                            {% for item in bag_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
-                                        {% if item.product.image %}
-                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                                        {% else %}
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                        {% endif %}
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">${{ item.product.price }}</p>
-                                    </td>
-                                    <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
-                                            {% csrf_token %}
-                                            <div class="form-group">
-                                                <div class="input-group">
+            <div class="col-lg-8">
+                <div class="mb-3">
+                    <div>
+                        {% for item in bag_items %}
+                        <div class="row mb-4">
+                            <div class="col-md-5 col-lg-3 col-xl-3">
+                                <div>
+                                    <img class="img-fluid w-100 mb-4" src="{{ item.product.image.url }}"
+                                        alt="{{ item.product.name }}">
+                                </div>
+                            </div>
+                            <div class="col-md-7 col-lg-9 col-xl-9">
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            <a class="cart-product-name"
+                                                href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a>
+                                            {% if item.product.onsale %}
+                                            <p class="my-0"><strong>Price Each: </strong>${{ item.product.onsale_price  }}
+                                            </p>
+                                            <p><strong>Subtotal:
+                                                </strong>${{ item.product.onsale_price | calc_subtotal:item.quantity }}</p>
+                                            {% else %}
+                                            <p class="my-0"><strong>Price Each: </strong>${{ item.product.price  }}</p>
+                                            <p><strong>Subtotal:
+                                                </strong>${{ item.poduct.price | calc_subtotal:item.quantity }}</p>
+                                            {% endif %}
+                                            <form class="form update-form mb-3" method="POST"
+                                                action="{% url 'adjust_bag' item.item_id %}">
+                                                {% csrf_token %}
+                                                <div class="quantity input-group">
+                                                    Qty:
                                                     <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                            data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                                            data-item_id="{{ item.product_id }}"
+                                                            id="decrement-qty_{{ item.product_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
                                                         </button>
                                                     </div>
-                                                    <input class="form-control form-control-sm qty_input" type="number"
-                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.item_id }}"
-                                                        id="id_qty_{{ item.item_id }}">
+                                                    <input class="qty_input" type="number" name="quantity"
+                                                        value="{{ item.quantity }}" min="1" max="99"
+                                                        data-item_id="{{ item.product_id }}"
+                                                        id="id_qty_{{ item.product_id }}">
                                                     <div class="input-group-append">
                                                         <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                            data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                            data-item_id="{{ item.product_id }}"
+                                                            id="increment-qty_{{ item.product_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
                                                         </button>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </form>
-                                        <a class="update-link text-info pointer"><small>Update</small></a>
-                                        <a class="remove-item text-danger pointer" id="remove_{{ item.item_id }}">
-                                            Delete Product
-                                        </a>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="5" class="pt-5 text-right">
-                                    <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
-                                    {% if free_delivery_delta > 0 %}
-                                        <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
-                                        </p>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                        <span class="text-uppercase">Secure Checkout</span>
-                                        <span class="icon">
-                                            <i class="fas fa-lock"></i>
-                                        </span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
+                                            </form>
+                                            <a class="update-link text-info">
+                                                <i class="fas fa-sync-alt mr-2"></i>Update Quantity
+                                            </a>
+                                        </div>
+                                        <div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center mt-3">
+                                        <div>
+                                            <a class="remove-item text-danger" id="remove_{{ item.product_id }}">
+                                                <i class="fas fa-trash-alt fa-lg mr-2"></i>Delete Product
+                                            </a>
+                                        </div>
+                                        <p class="upper-text cart-total">
+                                            {% if item.product.onsale %}
+                                            <p class="my-0 font-weight-bold">
+                                                ${{ item.product.onsale_price | calc_subtotal:item.quantity }}</p>
+                                            {% else %}
+                                            <p class="my-0 font-weight-bold">
+                                                ${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                            {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
                     </div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <h2 class="cart-card-header text-center">Bag total</h2>
+                        <ul class="list-unstyled">
+                            <li class="d-flex align-items-center justify-content-between upper-text">Bag
+                                Total<span>£{{ total|floatformat:2 }}</span></li>
+                            <li class="d-flex align-items-center justify-content-between upper-text">
+                                Delivery<span>£{{ delivery|floatformat:2 }}</span></li>
+                            <li class="border-bottom my-2"></li>
+                            <li class="d-flex align-items-center justify-content-between mb-4 upper-text">Grand
+                                Total<span>£{{ grand_total|floatformat:2 }}</span></li>
+                        </ul>
+                        {% if free_delivery_delta > 0 %}
+                        <div class="card-footer text-center">
+                            <p>Free delivery if you spend <strong
+                                    class="card-footer-text">£{{ free_delivery_delta }}</strong> more!</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row cart-footer-row">
+            <div class="col-lg-8">
+                <div class="row text-center">
+                    <a href="{% url 'products' %}" class="btn btn-yellow mt-2 mr-2">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
-                        <span class="text-uppercase">Keep Shopping</span>
+                        <span>Keep Shopping</span>
                     </a>
-                {% endif %}
+                    {% if request.user.is_authenticated %}
+                    <a href="{% url 'checkout' %}" class="btn btn-blue mt-2">
+                        <span>Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'account_login' %}" class="btn btn-blue mt-2">
+                        <span>Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                    {% endif %}
+                </div>
             </div>
         </div>
+        {% else %}
+        <div class="row cart-items-total">
+            <h4>Your bag is currently empty</h4>
+        </div>
+        <div class="row cart-footer-row">
+            <div class="col-lg-12">
+                <div class="row bg-light align-items-center text-center">
+                    <div class="col-md-6 text-md-left cart-footer">
+                        <a href="{% url 'products' %}" class="btn btn-yellow mt-2 mr-2">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span>Keep Shopping</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
+</section>
 {% endblock %}
-
 {% block postloadjs %}
-{{ block.super }}
+{{block.super}}
 {% include 'products/includes/quantity_input_script.html' %}
 
 <script type="text/javascript">
