--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,7 +35,12 @@
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">{{ product.category.friendly_name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                {% if product.onsale %}
+                    <p class="lead mb-0 text-left font-weight-bold"><s>Was ${{product.price }}</s></p>
+                    <p class="lead mb-0 text-left font-weight-bold">Now is ${{product.onsale_price }}</p>
+                {% else %}
+                    <p class="mb-0 text-left item-price font-weight-bold">${{product.price }}</p>
+                {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <p class="mt-3">{{ product.dimensions }}</p>
                 </div>
