--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,14 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title class=>Kassie {% block extra_title %}{% endblock %}</title>
+    <title>Kassie {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
       <div id="topnav" class="row bg-white d-none d-lg-flex pt-2">
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
               <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                  <h2 class="logo-font text-black my-0"><strong>Kassie</strong></h2>
+                  <h2 class="logo-font text-black text-uppercase my-0"><strong>Kassie</strong></h2>
               </a>
           </div>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
