--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,8 +7,14 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Navbar */
 .navbar {
     display: unset;
+    background-color: #F5F5F5;
+    
+}
+
+#topnav {
     background-color: #F5F5F5;
 }
 
