--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div id="topnav" class="row bg-white d-none d-lg-flex pt-2">
+      <div id="topnav" class="row d-none d-lg-flex pt-2">
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
               <a href="{% url 'home' %}" class="nav-link main-logo-link">
                   <h2 class="logo-font text-black text-uppercase my-0"><strong>Kassie</strong></h2>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
       </div>
-      <div class="row bg-white">
+      <div class="row">
           <nav class="navbar navbar-expand-lg navbar-light w-100">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
