--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,47 @@ body {
     background-color: #F6F6F6;
 }
 
+/* ----- Footer ----- */
+#footer {
+    background-color: #F6F6F6;
+}
+
+footer h5, h2 {
+    font-weight: bolder;
+    color: black; 
+    text-decoration: none;
+}
+
+footer i {
+    margin-left: 20px;
+}
+
+footer li {
+    list-style: none;
+    color: #222;
+}
+
+footer ul {
+    padding: 0;
+    margin: 0;
+}
+  
+footer a {
+    color: #222;
+    transition: 0.1s all ease-in-out 0.1s;
+    text-decoration: none;
+}
+
+footer li a:hover {
+    color: black;
+    text-decoration: underline;
+}
+  
+footer a i:hover {
+    color: rgb(3, 106, 120);
+    text-decoration: none;
+}
+
 /* Style the review dropdown button */
 #review-options,
 #no-reviews {
